# libimagequant

./: README.md  libimagequant.c  mediancut.c  meson.build  nearest.c  pam.c  pam.h  viter.c
.github/workflows/: ci.yml
patches/: colordifference-float.patch  de-recurse.patch  remap-heap-1.patch  remap-heap-2.patch  wasm-simd.patch
